k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hospital-app
  labels:
    name: hospital-app
